force-app/main/default/objects/mcdm_15__ApprovalsPageSettings__c/fields/mcdm_15__Campaign__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign</relationshipLabel>
    <relationshipName>Campaign</relationshipName>
    <type>Lookup</type>
</CustomField>