force-app/main/default/objects/mcdm_15__ApprovalsPageSettings__c/fields/mcdm_15__ColumnFields__c.field-meta.xml
<CustomField>
    <fullName>mcdm_15__ColumnFields__c</fullName>
    <description>The fields on campaign member to display in the pending approvals table</description>
    <label>Column Fields</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>