force-app/main/default/objects/mcdm_15__ApprovalsPageSettings__c/listViews/Onboarding_Queue_ApprovalsPageSettings.listView-meta.xml
<ListView>
    <fullName>Onboarding_Queue_ApprovalsPageSettings</fullName>
    <filterScope>Queue</filterScope>
    <label>Onboarding Queue</label>
    <queue>Onboarding_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>